Fixing positioning of Map behind header

--- a/css/app.scss
+++ b/css/app.scss
@@ -44,7 +44,7 @@ body {
 	left: 0;
 	position: absolute;
 	right: 0;
-	top: 0;
+	top: 41px;
 
 	.map-google-map-container {
 		position: relative;
